cssSimpleChart.css
/* Simple CSS Org chart */
/* By Yves Dessertine. https://github.com/yvesdWork/simpleCssChart */
/* This software is licensed under LGPL License */
/*
Limitations :
 * Doesn't allow multiple levels (not tested)
 * Nesting is badly handled. Many ">" selectors that will break if we add a level of nesting
   (Linked to previous) : remove the wrapping ugly div in li if possible
 * When Items 0* are not show, a line is displayed alone. FIXME
 */


/* Part I : stucture */

.chart ul {
	padding: 0;
	margin: 0;
	list-style-type: none;
	position: relative;
	/* So that chart isn't broken when line is too narrow
	 * (but you must handle the overflow to the right
	 * somehow else) */
	white-space: nowrap;
}
.chart li {
	list-style-type: none;
	display: inline-block;
	position: relative;
	vertical-align: top;
}
.chart li > div {
	/* This wrapper div serves to position the connections
	 * among others). TODO : delete this wrapping div if possible ?
	 */
	white-space: normal;
}
.chart li > div::before {
	/* All the magic is here : draw connections between boxes */
	content:'';
	position: absolute;
	width: 100%;
	height: 100%;
	left: 50%;
	top: 0;
	border-right: 0 none transparent;
	border-bottom: 0 none transparent;
	border-left-style: solid;
	border-top-style: solid;
	z-index: -1;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
.chart li:last-child > div::before {
	border-top: 0 none transparent;
}
.chart li.firstLevel > div {
	position: relative;
}
.chart ul > li:last-child {
	border-left: 0 solid transparent;
}
.chart .box {
	/* Must be set to Auto so that block level elements are
	 * horizontally centered */
	margin-left: auto;
	margin-right: auto;
}
.chart .grandpa > div {
	position: relative;
	display: inline-block;
	z-index: 0;
}
.chart .grandpa  > div::before {
	border-top-style: none;
	border-right-style: none;
	border-left-style: solid;
	border-bottom-style: solid;
	position: absolute;
	top: 1em;
	width: 100%;
	height: 100%;
	content: "";
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	z-index: -1;
}
.chart .grandpa  > div:last-child::before {
	border-bottom-style: none;
}
.chart .grandpa {
	text-align: center;
}

/* Part II : customization */

.chart li {
	/* Space left and right must be equally divided so chart
	 * will not be br0ken */
	padding-left: 0.5em;
	padding-right: 0.5em;
}
.chart li.firstLevel > div {
	/* Space before and after Item 1-1 */
	padding-top: 1em;
	padding-bottom: 1em;
}
.chart li.firstLevel > div > .box {
	/* TODO: this rule doesn't nest very well */
	margin-top: 0;
}
.chart li > div::before,
.chart .grandpa  > div::before {
	/* Colors & width for connections */
	border-color: #4A7EBB;
	border-width: 2px;
}
.chart .grandpa {
	/* Wrapper around the grandpa */
    /* TODO : remove the cheat with the white background :) */
	background: white;
}
.chart .box {
	margin-top: 1em;
	width: 12em;
	border: #8EB4E3 medium solid;
	border-radius: 1em;
	padding: 0.5em;
	text-align: left;
	background: white;
}

